force-app/main/default/objects/Agentforce_Config__mdt/fields/Authorization_Header_Value__c.field-meta.xml
<CustomField>
    <fullName>Authorization_Header_Value__c</fullName>
    <label>Authorization Header Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>