force-app/main/default/objects/Agentforce_Config__mdt/fields/Chat_Endpoint_Url__c.field-meta.xml
<CustomField>
    <fullName>Chat_Endpoint_Url__c</fullName>
    <label>Chat Endpoint Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>