force-app/main/default/objects/Agentforce_Config__mdt/fields/Endpoint_Url__c.field-meta.xml
<CustomField>
    <fullName>Endpoint_Url__c</fullName>
    <label>Endpoint Url</label>
    <length>512</length>
    <type>Text</type>
</CustomField>