force-app/main/default/objects/Agentforce_Config__mdt/fields/Messages_Endpoint_Url__c.field-meta.xml
<CustomField>
    <fullName>Messages_Endpoint_Url__c</fullName>
    <label>Messages Endpoint Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>