force-app/main/default/objects/Agentforce_Config__mdt/fields/Send_Message_Parameters__c.field-meta.xml
<CustomField>
    <fullName>Send_Message_Parameters__c</fullName>
    <label>Send Message Parameters</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>