force-app/main/default/objects/Agentforce_Config__mdt/fields/Start_Session_Endpoint_Url__c.field-meta.xml
<CustomField>
    <fullName>Start_Session_Endpoint_Url__c</fullName>
    <label>Start Session Endpoint Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>