force-app/main/default/objects/Agentforce_Config__mdt/fields/Start_Session_Parameters__c.field-meta.xml
<CustomField>
    <fullName>Start_Session_Parameters__c</fullName>
    <label>Start Session Parameters</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>